Added servlet filters to protect access to the page depending on the current role.

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,9 +1,16 @@
 application.title=Hospital “Walkers”
-index.title=Welcome Page
+application.welcome=Current user is
+application.button.logout=Log out
 
 role.admin=Admin
 role.doctor=Doctor
 role.nurse=Nurse
+
+login.title=Login page
+login.form.login=Username
+login.form.password=Password
+login.button.login=Log in
+login.message=Username or password is incorrect
 
 user.list.title=List of users
 user.list.table.login=User login
@@ -38,3 +45,6 @@ patient.edit.button.save=Save
 patient.edit.button.delete=Delete
 patient.edit.button.reset=Reset
 patient.edit.button.cancel=Cancel
+
+patient.view.title=Patient information
+patient.view.table.id=Patient number
