--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,25 +10,6 @@
 
     <!--context parameters-->
     <context-param>
-        <param-name>jdbc-driver</param-name><param-value>com.mysql.jdbc.Driver</param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>jdbc-url</param-name>
-        <param-value>jdbc:mysql://localhost:3306/hospital?useSSL=false&amp;useUnicode=true&amp;characterEncoding=UTF-8</param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>jdbc-user</param-name>
-        <param-value>root</param-value>
-    </context-param>
-
-    <context-param>
-        <param-name>jdbc-password</param-name>
-        <param-value>pass</param-value>
-    </context-param>
-
-    <context-param>
         <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
         <param-value>resources</param-value>
     </context-param>
@@ -43,6 +24,25 @@
         <servlet-name>DispatcherServlet</servlet-name>
         <url-pattern>*.html</url-pattern>
     </servlet-mapping>
+
+    <!--filters-->
+    <filter>
+        <filter-name>EncodingFilter</filter-name>
+        <filter-class>controller.EncodingFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>EncodingFilter</filter-name>
+        <url-pattern>*.html</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>SecurityFilter</filter-name>
+        <filter-class>controller.SecurityFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>SecurityFilter</filter-name>
+        <url-pattern>*.html</url-pattern>
+    </filter-mapping>
 
     <!--welcome file lists-->
     <welcome-file-list>
