Added the ability to view the initial information about the patient.

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -6,6 +6,10 @@ role.admin=Admin
 role.doctor=Doctor
 role.nurse=Nurse
 
+treatment.medicament=Medicament
+treatment.procedure=Procedure
+treatment.surgery=Surgery
+
 login.title=Login page
 login.form.login=Username
 login.form.password=Password
@@ -47,4 +51,9 @@ patient.edit.button.reset=Reset
 patient.edit.button.cancel=Cancel
 
 patient.view.title=Patient information
-patient.view.table.id=Patient number
+patient.view.table.id=Patient identification  number
+patient.view.table.firstname=Patient first name
+patient.view.table.lastname=Patient last name
+patient.view.table.ward=Number of ward
+patient.view.button.edit=Edit patient information
+patient.view.button.cancel=Cancel
