Hide buttons for users who do not have enough rights for use them.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
          metadata-complete="true">
 
     <!--display name-->
-    <display-name>Больница "Ходоки"</display-name>
+    <display-name>Больница</display-name>
 
     <!--context parameters-->
     <context-param>
