Added minimal css framework

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,6 +1,7 @@
 application.title=Hospital “Walkers”
 application.welcome=Current user is
 application.button.logout=Log out
+application.logged=You are logged in as
 
 role.admin=Admin
 role.doctor=Doctor
